# elapid

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/actions/setup-pixi/: action.yml
.github/workflows/: deploy-docs.yml  docs.yml  draft-paper.yml  os-tests.yml  publish-pypi.yml  run-condatest.yml  run-pytest.yml  test-package.yml  test-packagge.yml
contributing/: index.html
css/: colors.css
docs/: contributing.md  index.md  install.md  introduction.md
docs/css/: colors.css
docs/examples/: MaxentSimpleModel.ipynb  WorkingWithGeospatialData.ipynb  geo.md  maxent-simple.md
docs/geo/: annotation.md  prediction.md  pseudoabsence.md  working-xy.md
docs/module/: config.md  features.md  geo.md  models.md  stats.md  train_test_split.md  types.md  utils.md
docs/paper/: paper.bib  paper.md
docs/sdm/: maxent.md  nicheenvelope.md
elapid/: __init__.py  __version__.py  config.py  creatures.py  evaluate.py  features.py  geo.py  models.py  stats.py  train_test_split.py  types.py  utils.py
elapid/data/: ariolimax.gpkg
elapid/tests/: test_utils.py
examples/MaxentSimpleModel/: index.html
examples/WorkingWithGeospatialData/: index.html
install/: index.html
module/config/: index.html
module/features/: index.html
module/geo/: index.html
module/models/: index.html
module/stats/: index.html
module/train_test_split/: index.html
module/types/: index.html
module/utils/: index.html
paper/: paper.bib
paper/paper/: index.html
recipe/: convert-dependency-format.py  meta.yaml
sdm/maxent/: index.html
sdm/nicheenvelope/: index.html
search/: search_index.json
tests/: create_test_data.py  test_evaluate.py  test_features.py  test_geo.py  test_models.py  test_stats.py  test_train_test_split.py  test_utils.py
tests/data/: test-point-samples.gpkg  test-polygon.gpkg  test-raster-1band-offset.tif  test-raster-1band.tif  test-raster-2bands.tif
